force-app/main/default/objects/SBQQ__QuoteProcess__c/fields/SBQQ__Default__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this quote process as default.</description>
        <inlineHelpText>Select the checkbox to default the quote process selector to this process in Line Editor. This only applies when quote process selector is rendered as a picklist.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </CustomField>