force-app/main/default/objects/SBQQ__QuoteProcess__c/fields/SBQQ__GuidedOnly__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__GuidedOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether quotes covered by this process force guided product selection or allow for ad-hoc filtering.</description>
        <inlineHelpText>Select the checkbox if you want quotes covered by this process forced into guided product selection; otherwise, this defaults to ad-hoc filtering.</inlineHelpText>
        <label>Guided Only</label>
        <type>Checkbox</type>
    </CustomField>