force-app/main/default/objects/SBQQ__QuoteProcess__c/fields/SBQQ__ProductAutoSelected__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductAutoSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines if product is auto selected if it&apos;s the only one returned by a search.</description>
        <inlineHelpText>Select the checkbox to determine whether the product is auto selected if it&apos;s the only one returned by a search.</inlineHelpText>
        <label>Auto Select Product?</label>
        <type>Checkbox</type>
    </CustomField>