force-app/main/default/objects/SBQQ__QuoteProcess__c/fields/SBQQ__ProductConfigurationInitializer__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductConfigurationInitializer__c</fullName>
        <description>Custom Visualforce page that will be invoked on every configurable product to initialize the options.</description>
        <inlineHelpText>Custom Visualforce page that will be invoked on every configurable product to initialize the options.</inlineHelpText>
        <label>Product Configuration Initializer</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>