force-app/main/default/objects/SBQQ__QuoteProcess__c/fields/SBQQ__ProductSearchExecutor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductSearchExecutor__c</fullName>
        <description>Name of VisualForce page that performs custom product search.</description>
        <inlineHelpText>VisualForce page that performs custom product search.</inlineHelpText>
        <label>Product Search Executor</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>