force-app/main/default/objects/SBQQ__QuoteProcess__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__SortOrder__c</columns>
        <columns>SBQQ__Default__c</columns>
        <columns>SBQQ__ProductAutoSelected__c</columns>
        <columns>SBQQ__GuidedOnly__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>